Fixing colors, buttons, detail page, alignment, spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,28 @@
 .App {
   text-align: center;
+  font-family: 'Verdana';
+}
+
+img {
+  width: 200px;
+}
+
+button {
+  font-size: 17px;
+  margin: 10px;
+  padding: 10px;
+  width: 40%;
+  border: 1px solid white;
+  border-radius: 15%;
+  background-color: transparent;
+  color: black;
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.14), 0 1px 1px 1px rgba(0, 0, 0, 0.12), 0 1px 1px -5px rgba(0, 0, 0, 0.2);
+}
+
+
+@media screen and (max-width: 480px){
+
+img {
+  width: 100px;
+}
 }
