--- a/client/src/screens/FoodDetail.css
+++ b/client/src/screens/FoodDetail.css
@@ -1,3 +1,60 @@
 h3 {
   text-align: center;
 }
+
+.food-name {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+
+.food-effects {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.food-detail {
+  border-radius: 15%;
+  background-color: lavender;
+  width: 250px;
+  height: 250px;
+  padding: 15px;
+  box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.14), 0 5px 5px 5px rgba(0, 0, 0, 0.12), 0 1px 1px -5px rgba(0, 0, 0, 0.2);
+}
+
+.effects-text {
+  padding-left: 20px;
+  text-align: left;
+  font-size: 20px;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+@media screen and (max-width: 480px){
+
+  .food-detail {
+    width: 200px;
+    height: 180px;
+}
+
+  img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    object-position: 50% 50%;
+  } 
+
+  .effects-text {
+    text-align: center;
+    font-size: 20px;
+  }
+
+}
